# foscar-international-student-car-competition-2023

./: .gitignore  LICENSE  README.md  bashrc.txt
src/gps_team/gps/pure_pursuit/: CMakeLists.txt
src/gps_team/gps/pure_pursuit/2020_path/t/: surface.txt
src/gps_team/gps/pure_pursuit/include/: header.h  pure_pursuit.h  pure_pursuit_core.h  tunnel_static_obstacle.h
src/gps_team/gps/pure_pursuit/launch/: go.launch  go2.launch  go_bag.launch  path_maker_one_lap.launch  pure_pursuit.launch  pure_pursuit_delivery.launch  pure_pursuit_morai.launch  supyeong_parking.launch
src/gps_team/gps/pure_pursuit/msg/: ObjectInfo.msg  Waypoint.msg
src/gps_team/gps/pure_pursuit/paths/: 2022-9-12_20-41.txt  2022-9-12_20-43.txt  2022-9-20_20-17.txt  2022-9-24_11-45.txt  2022-9-24_11-46.txt  2022-9-24_14-27.txt  2022-9-24_14-28.txt  2022-9-24_15-15.txt  2022-9-24_15-26.txt  2022-9-24_15-6.txt  2022-9-24_8-50.txt  2022-9-24_8-59.txt  2022-9-24_9-0.txt  2022-9-24_9-1.txt  2022-9-24_9-35.txt  2023-10-11_16-9.txt  2023-10-11_22-1.txt  2023-10-1_16-38.txt  2023-10-1_16-55.txt  2023-10-1_17-29.txt  2023-10-3_17-10.txt  2023-10-4_14-13.txt  2023-10-5_15-55.txt  2023-10-6_16-11.txt  2023-10-6_20-15.txt  2023-10-8_22-23.txt  2023-10-9_0-57.txt  2023-10-9_1-0.txt  2023-10-9_20-41.txt  2023-10-9_20-42.txt  2023-10-9_20-43.txt  2023-10-9_21-19.txt  2023-10-9_9-28.txt  2023-6-15_19-58.txt  2023-6-15_20-1.txt  2023-6-15_20-15.txt  2023-6-15_20-17.txt  2023-6-15_21-21.txt  2023-6-27_19-42.txt  2023-7-12_16-39.txt  (+35 more)
src/gps_team/gps/pure_pursuit/paths/0922_final_path_K-city/: AVO.txt  DEL.txt  JHJ.txt  Lpath.txt  Rpath.txt  get_index.py  waypoint_modechanger.py
src/gps_team/gps/pure_pursuit/paths/Memory/: 2022-5-23_17-8.txt  2022-6-3_15-34.txt  2022-6-3_15-35.txt  2022-6-3_15-36.md.txt  2022-6-3_15-36.txt  2022-7-10_10-11.txt  2022-7-10_10-12.txt  2022-7-10_10-2.txt  2022-7-10_13-31.md.txt  2022-7-10_13-31.txt  2022-7-10_9-23.txt  2022-7-1_18-26.txt  2022-7-1_18-36.txt  2022-7-1_18-52.txt  2022-7-1_18-58.txt  2022-7-1_19-19.txt  2022-7-1_19-24.txt  2022-7-1_19-3.txt  2022-7-1_19-6.txt  2022-7-1_19-9.txt  2022-7-2_14-42.txt  2022-7-4_15-28.txt  2022-7-4_15-33.txt  2022-7-4_15-42.txt  2022-7-4_15-45.txt  2022-7-4_15-54.txt  2022-7-4_15-58.txt  2022-7-4_16-16.txt  2022-7-4_16-26.txt  2022-7-4_16-31.txt  2022-7-8_15-57.txt  a.kml  a.txt
src/gps_team/gps/pure_pursuit/paths/detail_map/: DA_tmp.md.txt  README.md  final_path_center.md.txt  final_path_center_Delivery.txt  last_final_path.md.txt  merge.py  rmMode.py  waypoint_mode_ID.py
src/gps_team/gps/pure_pursuit/paths/kcity/: 09_27_brain_storming.txt  2022_final_avoid_path.txt  2022_final_b_m.txt  2022_final_delivery_b_path.txt  2022_final_delivery_b_path_backup.txt  2022_final_global_path.txt  2022_final_global_path_a_l.txt  2022_final_global_path_a_l_p.txt  2022_final_global_path_a_m.txt  2022_final_global_path_a_s_p.txt  2022_semi_final_global_path.txt  2022_semi_final_left_avoid_path.txt  2022_semi_final_right_avoid_path.txt  a_l.txt  cw_coord.kml  cw_coord.txt  fianl_small_uturn.md.txt  final_0829.md.txt  final_final2.md.txt  final_parking.md.txt  final_slow_traffic.txt  final_traffic.txt  morai.py  parking_pos.txt  point.txt  semi_final.md.txt  semi_final_0909.md.txt  semi_final_in_course.md.txt  trafficpos.txt  (+14 more)
src/gps_team/gps/pure_pursuit/rviz/: final_rviz.rviz  pure_rviz.rviz
src/gps_team/gps/pure_pursuit/src/: encoder_value.cpp  final_back_up.cpp  get_imu.cpp  gps_velocity.py  gps_yaw.py  path_maker_one_lap.py  pid_throttle.cpp  pid_throttle_2.cpp  pure_pursuit.cpp  pure_pursuit_core.cpp  pure_pursuit_core2.cpp  pure_pursuit_core_final.cpp  pure_pursuit_core_final_delivery_path_switching.cpp  pure_pursuit_core_semi_final.cpp  pure_pursuit_gps.py  pure_pursuit_gps_morai.py  pure_pursuit_gps_morai2.py  pure_pursuit_version2.cpp  supyeong_parking.py
(+1322 files in other folders)
